drm/i915: Only clear write-domains after a successful wait-seqno

From Chris Wilson
5ca3f11716a0487110745824ad5282bf4c00d211 in ubuntu 3.8
daa13e1ca587bc773c1aae415ed1af6554117bd4 in mainline linux
https://bugs.freedesktop.org/show_bug.cgi?id=66163